added services page and changed font to poppins

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/flatly/bulmaswatch.min.css">
     <title>Document</title>
 </head>
+<style>
+    *{
+        font-family: 'Poppins', sans-serif;
+    }
 
+    
+</style>
 <body>
     
     <nav class="navbar is-white" role="navigation" aria-label="main navigation">
@@ -30,7 +37,7 @@
                 <a class="navbar-item">
                     Learn
                 </a>
-                <a class="navbar-item">
+                <a href="services.html" class="navbar-item">
                     Services
                 </a>
                 <a class="navbar-item">
