fixed lhs margin

--- a/index.html
+++ b/index.html
@@ -92,14 +92,18 @@
       <section class="section">
         <div class="container">
             <div class="tile is-ancestor">
-                <div class="tile is-child">
-                    <div style="height: 100%;" class="level">
-                        <p class="level-item">
-                            <div>
-                                <h1 class="title">Lorem ipsum dolor sit amet.</h1>
-                                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores dicta ut, iste modi perspiciatis aliquid inventore. Iste labore quidem quaerat magni, debitis totam at, culpa error et aspernatur sed! Corporis.</h2>
-                            </div>
-                        </p>
+                <div class="tile is-parent">
+                    <div class="tile is-child">
+                        <div style="height: 100%;" class="level">
+                            <p class="level-item">
+                                <div>
+                                    <h1 class="title">Lorem ipsum dolor sit amet.</h1>
+                                    <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores dicta
+                                        ut, iste modi perspiciatis aliquid inventore. Iste labore quidem quaerat magni, debitis
+                                        totam at, culpa error et aspernatur sed! Corporis.</h2>
+                                </div>
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="tile is-parent">
