fixed mobile layout

--- a/services.html
+++ b/services.html
@@ -65,8 +65,9 @@
 
         </div>
         <div id="pop" class="box has-text-centered">
-            <h1 class="title has-text-centered is-small">Lorem ipsum dolor sit amet.</h1>
-            <h2 class="subtitle has-text-centered is-small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores dicta ut, iste modi perspiciatis aliquid inventore.</h2>
+            <h1 class="title has-text-centered is-small">SOLUTION FOR ALL TYPE OF BUSINESSES</h1>
+            <h2 class="subtitle has-text-centered is-small">Dimentrix Technologies offers a wealth of technical expertise. We engineer and deliver diverse, complex, software, web, and mobile solutions for any business need. 
+            </h2>
             <a href="#" class="button is-primary">Contact Us</a>
         </div>
     </section>
@@ -75,10 +76,10 @@
         <div class="hero-body">
           <div class="container">
             <h1 class="title">
-                Lorem ipsum dolor sit amet.
+                SOLUTION FOR ALL TYPE OF BUSINESSES
             </h1>
             <h2 class="subtitle">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Dimentrix Technologies offers a wealth of technical expertise. We engineer and deliver diverse, complex, software, web, and mobile solutions for any business need.
             </h2>
           </div>
         </div>
@@ -96,25 +97,26 @@
               <div class="tile is-parent">
                   <div class="tile is-child">
                       <div class="box"></div>
-                      <p class="content has-text-centered">Lorem</p>
+                      <p class="content has-text-centered">Product-Minded Leadership Team</p>
                   </div>
               </div>
               <div class="tile is-parent">
                   <div class="tile is-child">
                       <div class="box"></div>
-                      <p class="content has-text-centered">Lorem</p>
+                      <p class="content has-text-centered">A Product-Driven Team</p>
                   </div>
               </div>
               <div class="tile is-parent">
                   <div class="tile is-child">
                       <div class="box"></div>
-                      <p class="content has-text-centered">Lorem</p>
+                      <p class="content has-text-centered">Powerful Customer First Strategy
+                    </p>
                   </div>
               </div>
               <div class="tile is-parent">
                   <div class="tile is-child">
                       <div class="box"></div>
-                      <p class="content has-text-centered">Lorem</p>
+                      <p class="content has-text-centered">Innovation</p>
                   </div>
               </div>
 
@@ -134,8 +136,9 @@
                             
                             <div>
                                 <img src="imgs/undraw_code_review_l1q9.svg" alt="">
-                                <h1 class="title has-text-centered is-small">Lorem ipsum dolor sit amet.</h1>
-                                <h2 class="subtitle has-text-centered is-small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores dicta ut, iste modi perspiciatis aliquid inventore.</h2>
+                                <h1 class="title has-text-centered is-small">Software Development</h1>
+                                <h2 class="subtitle has-text-centered is-small">Well qualified engineers working on a wide variety of technology stacks, verticals, and business domains. 
+                                    Our result-driven software development services include a multitude of services, including custom Web development, Web & Big Data Architectures, Enterprise software development, Cloud-Enabled development, and Custom software development</h2>
                             </div>
                         </div>
                         <div class="tile is-child">
