added avenir font

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     @font-face {
         font-family: Avenir;
-        src: url(fonts/AvenirNextLTPro-Bold.otf);
+        src: url(./fonts/AvenirNextLTPro-Bold.otf);
         font-weight: bold;
     }
     *{
