--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/flatly/bulmaswatch.min.css">
-    <link rel="icon" href="imgs/DMX Logo 2-03.svg" type="image/gif" ">
+    <link rel="icon" href="imgs/DMX Logo 2-03.svg" type="image/gif">
     <title>Document</title>
 </head>
 <style>
@@ -57,7 +57,6 @@
     }
 </style>
 <body>
-    
     <nav class="navbar is-spaced light" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item img" href="/">
@@ -71,7 +70,7 @@
         </div>
       
         <div class="navbar-menu" id="navMenu">
-            <div class="navbar-end">
+            <div class="navbar-start">
                 <a href="whydeepinsight.html" class="navbar-item a">
                     Why DeepInsight
                 </a>
@@ -84,9 +83,12 @@
                 <a href="company" class="navbar-item a">
                     Company
                 </a>
+            </div>
+            <div class="navbar-end">
+
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary">
+                        <a class="button is-primary is-outlined">
                             <strong>Try Free</strong>
                         </a>
                     </div>
