--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         height: 280px;
     }
     .light{
-        background-color: #ecf0f1;
+        background-color: white;
     }
     .one{
         background-color: #172B4D;
@@ -46,18 +46,23 @@
     }
     .a{
         color: black;
+        font-size: 18px;
     }
     .img{
+        
         background: url(imgs/Logo.svg);
         background-size: contain;
-        width: 195px;
+        background-repeat: no-repeat;
+        width: 300px;
+        height: 100px;
     }
     .burger span{
         background-color: black;
     }
 </style>
 <body>
-    <nav class="navbar is-spaced light" role="navigation" aria-label="main navigation">
+
+    <nav class="navbar light" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item img" href="/">
           </a>
