--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary is-outlined">
+                        <a class="button is-primary">
                             <strong>Try Free</strong>
                         </a>
                     </div>
