--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         background-repeat: no-repeat;
         width: 300px;
         height: 100px;
+        margin-top: -10px;
     }
     .burger span{
         background-color: black;
