--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         color: black;
         font-size: 18px;
     }
+    a.navbar-item:hover{
+        color: #3F37DC;
+    }
     .img{
         
         background: url(imgs/Logo.svg);
@@ -55,10 +58,14 @@
         background-repeat: no-repeat;
         width: 300px;
         height: 100px;
-        margin-top: -10px;
+        margin-top: -9px;
     }
     .burger span{
         background-color: black;
+    }
+    a.button.is-primary{
+        background-color: #3F37DC;
+        
     }
 </style>
 <body>
@@ -94,8 +101,8 @@
 
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary">
-                            <strong>Try Free</strong>
+                        <a class="button is-primary is-small">
+                            Try Free
                         </a>
                     </div>
                 </div>
