--- a/whydeepinsight.html
+++ b/whydeepinsight.html
@@ -52,9 +52,9 @@
         width: 195px;
     }
     a.navbar-item:hover{
-        background-color: #3F37DC;
+        color: #3F37DC;
     }
-    a.button.is-primary{
+    a.button.is-outlined{
         border-color: #3F37DC;
         color: #3F37DC;
     }
@@ -69,18 +69,7 @@
             <a class="navbar-item img" href="/">
               
             </a>
-            <a href="whydeepinsight.html" class="navbar-item a">
-                Why DeepInsight
-            </a>
-            <a href="learn.html" class="navbar-item a">
-                Learn
-            </a>
-            <a href="services.html" class="navbar-item a">
-                Services
-            </a>
-            <a href="company" class="navbar-item a">
-                Company
-            </a>
+
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
               <span aria-hidden="true"></span>
               <span aria-hidden="true"></span>
@@ -89,11 +78,25 @@
           </div>
         
           <div class="navbar-menu" id="navMenu">
-              <div class="navbar-end">
+            <div class="navbar-start">
+                <a href="whydeepinsight.html" class="navbar-item a">
+                    Why DeepInsight
+                </a>
+                <a href="learn.html" class="navbar-item a">
+                    Learn
+                </a>
+                <a href="services.html" class="navbar-item a">
+                    Services
+                </a>
+                <a href="company" class="navbar-item a">
+                    Company
+                </a>
+            </div>  
+            <div class="navbar-end">
 
                   <div class="navbar-item">
                       <div class="buttons">
-                          <a class="button is-primary is-small is-outlined">
+                          <a class="button is-small is-outlined">
                               Try it Free
                           </a>
                       </div>
