--- a/whydeepinsight.html
+++ b/whydeepinsight.html
@@ -50,6 +50,7 @@
         background: url(imgs/Logo.svg);
         background-size: contain;
         width: 195px;
+        margin-top: -5px;
     }
     a.navbar-item:hover{
         color: #3F37DC;
