--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         margin-bottom: 45px;
         width: 85%;
         cursor: pointer;
+        font-weight: bold;
     }
     .main{
         margin-top: 60px;
