edited the tags

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         margin-bottom: 45px;
         width: 85%;
         cursor: pointer;
-        font-weight: bold;
     }
     .main{
         margin-top: 60px;
@@ -78,6 +77,9 @@
     }
     a.button.is-primary{
         background-color: #3F37DC;
+    }
+    .tag:not(body).is-medium {
+        padding: 20px;
     }
 </style>
 <body>
@@ -164,7 +166,7 @@
         <div>
             <ul class="m-tabs is-hidden-touch">
                 <li class="m-link" data-target="linkOne"><span class="tag is-rounded is-info is-light is-medium">One organization, one platform</span></li>
-                <li class="m-link" data-target="linkTwo"><span>Secure and Scalable</span></li>
+                <li class="m-link" data-target="linkTwo"><span >Secure and Scalable</span></li>
                 <li class="m-link" data-target="linkThree"><span>Apply to any Business</span></li>
                 <li class="m-link" data-target="linkFour"><span>Fast implementation</span></li>
                 <li class="m-link" data-target="linkFive"><span>Strong Support team</span></li>
