--- a/index.html
+++ b/index.html
@@ -4,90 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/flatly/bulmaswatch.min.css">
     <link rel="icon" href="imgs/DMX Logo 2-03.svg" type="image/gif">
+    <link rel="stylesheet" href="style.css">
+   
     <title>Document</title>
 </head>
 <style>
-    @font-face {
-        font-family: Avenir;
-        src: url(fonts/AvenirNextLTPro-Regular.otf);
-    }
-    @font-face {
-        font-family: Avenir;
-        src: url(./fonts/AvenirNextLTPro-Bold.otf);
-        font-weight: bold;
-    }
-
-    *{
-        font-family: Avenir;
-    }
-
-    .light{
-        background-color: white;
-
-
-
-    }
-
-    footer{
-        background-color: #172B4D;
-    }
-    .a{
-        color: #18164A;
-        margin-left: 10px;
-        font-size: 16px;
-       
-    }
-
-    .m-active{
-        border-bottom: 3px solid #18164A;;
-    }
-   .a:hover{   
-        border-bottom: 3px solid #DFE1E5;
-    }
-
-    .burger span{
-        background-color: black;
-    }
-
-    .m-tabs{
-        display: flex;
-        justify-content: space-between;
-        align-items: baseline;
-        margin-top: 45px;
-        margin-bottom: 45px;
-        width: 85%;
-        cursor: pointer;
-    }
-    .main{
-        margin-top: 10px;
-    }
-
-    .border{
-        border-top: 2px solid #172B4D;
-        padding: 0 20px;
-    }
-    .img{
-        background: url(imgs/Logo.svg);
-        background-size: contain;
-        width: 195px;
-        margin-top: -5px;
-    }
-    nav{
-        box-shadow: 0 4px 4px -2px rgba(0,0,0,.2);
-    }
-    a.navbar-item:hover{
-        color: #18164A;
-    }
-    a.button.is-primary{
-        background-color: #18164A;
-    }
-    .tag:not(body).is-medium {
-        padding: 20px;
-    }
-    .dropdown{
-        margin: 45px 0;
-    }
-
+    
 </style>
 <body>
 
@@ -136,10 +58,10 @@
  
      <section class="section main">
         <div class="container">
-            <div class="columns is-8 is-variable" style="padding-left: 10%; padding-right: 10%;">
+            <div class="columns s is-8 is-variable">
                 <div class="column" style= "margin: auto; ">                
-                    <h1 class="title has-text-weight-bold"  >Empower Your Business To Transform Data Into Powerful Insights</h1>
-                    <h2 class="subtitle  ">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </h2>
+                    <h1 class="title t has-text-weight-bold"  >Empower Your Business To Transform Data Into Powerful Insights</h1>
+                    <h2 class="subtitle st   ">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </h2>
             </div>
                 <div class="column" ><img src="imgs/Home [Recovered]_Data Analysis.svg" alt="" class=""></div>
             </div>
@@ -150,10 +72,10 @@
             <div class="columns is-8 is-variable" style="padding-left: 10%; padding-right: 10%;">
                 <div class="column"><img src="imgs/Home [Recovered]_Monetize Your Data.svg" alt="" class="" style="height: auto;"></div>
                 <div class="column" style="margin: auto;">    
-                    <h1 class="title has-text-weight-bold">
+                    <h1 class="title t has-text-weight-bold">
                         Monetize Your Data
                     </h1>
-                    <h2 class="subtitle">
+                    <h2 class="subtitle st ">
                         DeepInsight is designed to help your company monetize data. With DeepInsight, you have a unified solution where you visualize, analyze, and gain meaningful insights about your business faster and more effectively and securely, on any device. It is a single platform that covers all your data needs from robust data discovery, data quality to powerful reporting with predictive analytics, personalized dashboards, secure and easy collaboration, applied machine learning and mobile BI.
                     </h2>
                 </div>
@@ -217,7 +139,7 @@
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
                     <h1 class="title has-text-weight-bold">One organization, one platform</h1>
-                    <p>You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
+                    <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
                 <div class="column"><img src="imgs/Home [Recovered]_One Org. One Platform.svg" alt="" class=""></div>
@@ -226,7 +148,7 @@
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
                     <h1 class="title has-text-weight-bold">Secure and Scalable</h1>
-                    <p>You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
+                    <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
                 <div class="column"><img src="imgs/Home [Recovered]_Secure And Scalable.svg" alt="" class=""></div>
@@ -235,7 +157,7 @@
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
                     <h1 class="title has-text-weight-bold">Apply to any Business</h1>
-                    <p>You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
+                    <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
                 <div class="column"><img src="imgs/Home [Recovered]_Apply To Any Business.svg" alt="" class=""></div>
@@ -244,7 +166,7 @@
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
                     <h1 class="title has-text-weight-bold">Fast implementation</h1>
-                    <p>You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
+                    <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
                 <div class="column"><img src="imgs/Home [Recovered]_Fast Implementation.svg" alt="" class=""></div>
@@ -253,7 +175,7 @@
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
                     <h1 class="title has-text-weight-bold">Strong Support team</h1>
-                    <p>You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
+                    <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
                 <div class="column"><img src="imgs/data.svg" alt="" class=""></div>
