--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
     <section class="section bottom">
         
         <div class="container">
-        <h1 class="title has-text-weight-bold" style="margin-top: 100px;">
+        <h1 class="title has-text-weight-bold" style="margin-top: 100px; margin-left: 20px;">
             Why Organizations Chose US?
         </h1>
         <div>
-            <ul class="m-tabs is-hidden-touch">
+            <ul class="m-tabs is-hidden-touch" >
                 <li class="m-link" data-target="linkOne"><span class="tag is-rounded has-text-weight-bold is-info is-light is-large">One organization, one platform</span></li>
                 <li class="m-link" data-target="linkTwo"><span >Secure and Scalable</span></li>
                 <li class="m-link" data-target="linkThree"><span>Apply to any Business</span></li>
@@ -105,7 +105,7 @@
 
         <div class="dropdown is-hidden-desktop">
             <div class="dropdown-trigger">
-              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" style=" margin-left: 20px;" >
                 <span>One organization, one platform</span>
                 <span class="icon is-small">
                   <i class="fas fa-angle-down" aria-hidden="true"></i>
@@ -138,7 +138,7 @@
             <div id="linkOne" class="columns s is-8 is-variable sec" >
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
-                    <h1 class="title has-text-weight-bold">One organization, one platform</h1>
+                    <h1 class="title tt has-text-weight-bold">One organization, one platform</h1>
                     <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
             <div id="linkTwo" class="columns s is-8 is-variable is-hidden sec" >
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
-                    <h1 class="title has-text-weight-bold">Secure and Scalable</h1>
+                    <h1 class="title tt has-text-weight-bold">Secure and Scalable</h1>
                     <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
             <div id="linkThree" class="columns s is-8 is-variable is-hidden sec" >
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
-                    <h1 class="title has-text-weight-bold">Apply to any Business</h1>
+                    <h1 class="title tt has-text-weight-bold">Apply to any Business</h1>
                     <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
             <div id="linkFour" class="columns s is-8 is-variable is-hidden sec" >
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
-                    <h1 class="title has-text-weight-bold">Fast implementation</h1>
+                    <h1 class="title tt has-text-weight-bold">Fast implementation</h1>
                     <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
             <div id="linkFive" class="columns s is-8 is-variable is-hidden sec"  >
                 <div class="column" style= "margin: auto; "> 
                     <div class="content">
-                    <h1 class="title has-text-weight-bold">Strong Support team</h1>
+                    <h1 class="title tt has-text-weight-bold">Strong Support team</h1>
                     <p class="st">You can use DeepInsight to create data visualizations exactly how you like. DeepInsight is a secured, Advanced Business Intelligence and Data Analytics platform that enables business users to gain insights and make data-focused decisions. </hp>
                     </div>
                 </div>
