--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class="dropdown is-hidden-desktop">
             <div class="dropdown-trigger">
-              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" style=" margin-left: 20px;" >
+              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" >
                 <span>One organization, one platform</span>
                 <span class="icon is-small">
                   <i class="fas fa-angle-down" aria-hidden="true"></i>
